# Fathom

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/graph/: build.py  edges.py  state.py
backend/app/graph/nodes/: cross_reference.py  fetch.py  planner.py  reflect.py  search.py  writer.py
backend/app/schemas/: planner.py  reflect.py  report.py  source.py
backend/app/services/: exceptions.py  extract.py  llm.py  search.py
backend/app/streaming/: sse.py
backend/tests/: test_graph_smoke.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: DepthGauge.tsx  ErrorState.tsx  LandingView.tsx  NodeGraph.tsx  ReportView.tsx  TraceView.tsx  VerdictPanel.tsx
frontend/src/hooks/: useResearch.ts
frontend/src/lib/: api.ts  sse.ts
