[project]
name = "fathom-backend"
version = "0.1.0"
description = "Fathom backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "langgraph",
    "openai",
    "pydantic>=2",
    "pydantic-settings",
    "tavily-python",
    "httpx",
    "trafilatura",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
